# chassis

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .semgrep.yml  CLAUDE.md  CODEOWNERS  CONTRACT.yaml  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md  deny.toml  release-gate.json  renovate.json
.chassis/: exemptions.yaml  spec-index-source.yaml
.github/: action-pin-allowlist.txt
artifacts/: spec-index.json
crates/: Cargo.toml
crates/chassis-cli/: Cargo.toml
crates/chassis-cli/src/: main.rs
crates/chassis-cli/tests/: cli_attest.rs  cli_diff.rs  cli_drift.rs  cli_exempt.rs  cli_export.rs  cli_help.rs  cli_release_gate.rs  cli_smoke.rs  cli_spec_index.rs  cli_trace.rs  cli_validate.rs
crates/chassis-cli/tests/common/: mod.rs
crates/chassis-cli/tests/fixtures/: breaking_version_not_bumped_new.yaml  breaking_version_not_bumped_old.yaml  library_minimal.yaml  library_minimal_v2.yaml  schema_invalid.yaml  spec_index_bad_unknown_claim.json  spec_index_link_clean.json
crates/chassis-core/: Cargo.toml
crates/chassis-core/examples/: fingerprint.rs  validate_artifact.rs  write_keypair.rs
crates/chassis-core/src/: adr.rs  adr_kernel_rule_binding_tests.rs  artifact.rs  authority_index.rs  claims.rs  coherence_report.rs  contract.rs  contract_claim_markers.rs  diagnostic.rs  diagnostic_registry.rs  exemption.rs  exports.rs  field_definition.rs  fingerprint.rs  gate.rs  lib.rs  spec_index.rs  spec_index_markdown.rs  supply.rs  tag_ontology.rs  validators.rs
crates/chassis-core/src/attest/: assemble.rs  mod.rs  predicate.rs  sign.rs
crates/chassis-core/src/diff/: claims.rs  classify.rs  envelope.rs  mod.rs  tests.rs
crates/chassis-core/src/drift/: git.rs  mod.rs  report.rs  score.rs
crates/chassis-core/src/exempt/: apply.rs  codeowners.rs  envelope.rs  lifecycle.rs  mod.rs  tests.rs  verify.rs
crates/chassis-core/src/scanner/: mod.rs  sarif.rs  summary.rs
crates/chassis-core/src/trace/: backend.rs  graph.rs  mod.rs  render.rs  types.rs
crates/chassis-core/src/trace/extract/: mod.rs  rust.rs  typescript.rs
crates/chassis-core/tests/: adr_frontmatter.rs  artifact_schemas.rs  contract_claim_coverage.rs  diagnostic_governance.rs  scanner_integration.rs  schemas_self_contained.rs  self_application.rs  spec_kit_markdown_parity.rs  trace_extract_fixtures.rs  trace_extractor_parity.rs  trace_graph_policy.rs
crates/chassis-jsonrpc/: Cargo.toml
crates/chassis-jsonrpc/src/: main.rs
crates/chassis-jsonrpc/tests/: jsonrpc_adversarial.rs  jsonrpc_smoke.rs
crates/chassis-mcp/: Cargo.toml
crates/chassis-mcp/src/: main.rs
crates/chassis-mcp/tests/: mcp_smoke.rs
demo/: README.md  common.sh  fail-attestation.sh  fail-contract.sh  fail-drift.sh  fail-exemption.sh  pass.sh
docs/: AGENTS.original.md  ASSURANCE-LADDER.md  CONTRACT-SCHEMA-LOOSENESS-SURVEY.md  EXTRACTION-NOTES.md  FIXUP-NOTES.md  FOUNDATIONS-NOTES.md  HISTORY.md  OBJECTIVES-REGISTRY.original.md  PROTOCOL.original.md  REFS-TO-FIX.md  STABLE-IDS.md  WAVE-PLAN.md  future-mcp.md  spec-kit-chassis-preset.md
policy/: README.md  chassis_release.rego  chassis_release_test.rego
schemas/: adr.schema.json  authority-index.schema.json  cedar-facts.schema.json  coherence-report.schema.json  contract.schema.json  diagnostic.schema.json  drift-report.schema.json  dsse-envelope.schema.json  eventcatalog-metadata.schema.json  exemption-registry.schema.json  field-definition.schema.json  in-toto-statement-v1.schema.json  opa-input.schema.json  policy-input.schema.json  release-gate.schema.json  scanner-summary.schema.json  spec-index.schema.json  tag-ontology.schema.json  trace-graph.schema.json
scripts/: README.md  build-drift-fixture-repo.sh  build-source-archive.sh  (+7 more)
(+304 files in other folders)
