[package]
name = "chassis-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "chassis"
path = "src/main.rs"

[dependencies]
chassis-core = { path = "../chassis-core" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2"
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2"
base64 = "0.22"
chassis-core = { path = "../chassis-core" }
predicates = "3"
serde_json = "1"
tempfile = "3"
