[package]
name = "chassis-core"
version = "0.1.0"
edition = "2021"
description = "Typed contract / ADR / exemption / coherence vocabulary + JSON Schema validators."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jsonschema = { version = "0.30", default-features = false }
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
globset = "0.4"
semver = "1"
git2 = { version = "0.18", default-features = false, features = ["vendored-libgit2"] }
