[package]
name = "chassis-core"
version = "0.1.0"
edition = "2021"
description = "Typed contract / ADR / exemption vocabulary + JSON Schema validators."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
git2 = { version = "0.20.4", default-features = false, features = ["vendored-libgit2"] }
globset = "0.4"
jsonschema = { version = "0.30", default-features = false }
pulldown-cmark = "0.10"
rand = "0.8"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
