[package]
name = "chassis-jsonrpc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "chassis-jsonrpc"
path = "src/main.rs"

[dependencies]
chassis-core = { path = "../chassis-core" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2"
serde_json = "1"
tempfile = "3"
